2016-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code cleanup, also gets rid of a GCC warning.

2016-05-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac
	* src/SDCCmain.c
	  Call setrlimit() in a more compatible way.

2016-05-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/hc08/_setjmp.c,
	* device/lib/s08/_setjmp.c: svn eol-style native
	* support/regression/tests/gcc-torture-execute-pr28982a.c,
	* support/regression/tests/bug-2197.c: enabled for mcs51
	* src/mcs51/gen.c (genFunction, genEndFunction): implemented RFE 81 to
	  disable interrupts before stacking
	* sim/ucsim/s51.src/uc390.cc: use IDMx/MCON instead of SA/ACON
	* sim/ucsim/s51.src/uc390hw.cc: do not lock out all IDM settings
	* src/ds390/main.c (_ds390_genIVT): MCON requires Timed Access

2016-05-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/compact-results.py
	  Roll back to previous version.

2016-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/setjmp.h: ds390 needs 5 bytes
	* device/lib/_setjmp.c: added ds390 version
	* device/lib/ds390/setjmp.c: updated, but still a dummy
	* device/lib/hc08/_setjmp.c,
	* device/lib/s08/_setjmp.c: fixed stack pointer bug
	* sim/ucsim/cmd.src/Makefile.in,
	* sim/ucsim/gui.src/Makefile.in,
	* sim/ucsim/main_in.mk,
	* sim/ucsim/sim.src/Makefile.in: drop -u to prevent warning on ar 2.26
	* sim/ucsim/s51.src/uc390cl.h: added ixram
	* sim/ucsim/s51.src/uc390.cc: check full ixram range,
	* sim/ucsim/s51.src/uc51.cc,
	* sim/ucsim/s51.src/uc89c51r.cc: show @R0, @R1 and 8 stack bytes
	* sim/ucsim/sim.src/mem.cc (cl_memory::dump): allow decrementing range
	* sim/ucsim/stm8.src/inst.cc (cl_stm8::flag_cvh): fixed warnings
	* src/SDCC.y: critical is not a part of the calling convention
	* support/regression/tests/bug663539.c: fix to fool the python script
	* support/regression/tests/gcc-torture-execute-20010409-1.c: use longjmp()
	  instead of return() to mimic exit()