@@ -1,3 +1,8 @@
+2016-05-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sdas/linksrc/lkelf.c:
+	  Enable ELF symbol table output, (from patch #255 by Peter Dons Tychsen).
+
 2016-05-12 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
